foolish/foolish-core/src/snapshots/foolish_core__approval_tests__offset_access_backward.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 BZCHxoh6UH0qPPnS/KXwjuIMb0EgbuGKo1Fp35hBFjkpd1SGGuDkvvAouQ0KeuPhQZnT8TZm7lLC8PocdywsAQ==
INPUT: {data = {a=10; b=20; c=30; d=40; e=50}; last = data#-1; second_last = data#-2;}
[0] PARSED:
Brane [EMBRYONIC]
  data = 
  Brane [EMBRYONIC]
    a = 
    Int(10) [INDEPENDENT]
    b = 
    Int(20) [INDEPENDENT]
    c = 
    Int(30) [INDEPENDENT]
    d = 
    Int(40) [INDEPENDENT]
    e = 
    Int(50) [INDEPENDENT]
  last = 
  Index(offset=-1, ANCHORED) [EMBRYONIC]
  secondˍlast = 
  Index(offset=-2, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  data = 
  Brane [CONSTANT]
    a = 
    Int(10) [INDEPENDENT]
    b = 
    Int(20) [INDEPENDENT]
    c = 
    Int(30) [INDEPENDENT]
    d = 
    Int(40) [INDEPENDENT]
    e = 
    Int(50) [INDEPENDENT]
  last = 
  Int(50) [INDEPENDENT]
  secondˍlast = 
  Int(40) [INDEPENDENT]
