foolish/foolish-core/src/snapshots/foolish_core__approval_tests__operatorPrecedenceIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 x5JzdospJrJCY3knzpebqco0lqwniAT5Ieu8ajhmTUygEyADZOM1KIK9vs/Hnjm1zfeA1aZbiwLNuR8ztfSlAg==
INPUT: {2 + 3 * 4 - 5;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(-) [EMBRYONIC]
    Operator(+) [EMBRYONIC]
      Int(2) [INDEPENDENT]
      Operator(*) [EMBRYONIC]
        Int(3) [INDEPENDENT]
        Int(4) [INDEPENDENT]
    Int(5) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(9) [CONSTANT]
