foolish/foolish-core/src/snapshots/foolish_core__approval_tests__operator_precedence.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 +8uw/s4bdtHU5g2qwVYiomYCTZhWoN1ftb/VYWOCkTl5QlQVT4arl8lRMrx0x6eLYZRFeerltKO7oGP7osztDg==
INPUT: {2 + 3 * 4 - 5;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(-) [EMBRYONIC]
    Operator(+) [EMBRYONIC]
      Int(2) [INDEPENDENT]
      Operator(*) [EMBRYONIC]
        Int(3) [INDEPENDENT]
        Int(4) [INDEPENDENT]
    Int(5) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(9) [CONSTANT]
