foolish/foolish-core/src/snapshots/foolish_core__approval_tests__operator_transparency_deep_chain.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {a=1, b=2, c=3, d=4, e=5; result = #-1 + #-2 + #-3 + #-4 + #-5;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  Int(3) [INDEPENDENT]
  d = 
  Int(4) [INDEPENDENT]
  e = 
  Int(5) [INDEPENDENT]
  result = 
  Operator(+) [EMBRYONIC]
    Operator(+) [EMBRYONIC]
      Operator(+) [EMBRYONIC]
        Operator(+) [EMBRYONIC]
          Index(offset=-1, FREE) [EMBRYONIC]
          Index(offset=-2, FREE) [EMBRYONIC]
        Index(offset=-3, FREE) [EMBRYONIC]
      Index(offset=-4, FREE) [EMBRYONIC]
    Index(offset=-5, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  Int(3) [INDEPENDENT]
  d = 
  Int(4) [INDEPENDENT]
  e = 
  Int(5) [INDEPENDENT]
  result = 
  Int(15) [CONSTANT]
