foolish/foolish-core/src/snapshots/foolish_core__approval_tests__operator_transparency_unary_in_brane.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 citZaZB+kaWNr/OAdetNqVfKLwGI7IqJyMhoHA6lkFg8AJ0y4Ufj99+xkKeL+WkmbXVqwYBZeduaQZWHvj47Dw==
INPUT: {a=5, b=-a;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(5) [INDEPENDENT]
  b = 
  Operator(-) [EMBRYONIC]
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Int(5) [INDEPENDENT]
  b = 
  Int(-5) [CONSTANT]
